--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <ngx-spinner type="ball-atom" loadingText="Processing ...">
   </ngx-spinner>
-  <h4 class="mt-2">If you want to create a new todo</h4>
-  <button  class="btn btn-outline-info mt-2" routerLink="/addtodo">Create New Todo</button>
+  <div class="mb-3">
+    <h4 class="mt-2">If you want to create a new todo</h4>
+    <button  class="btn btn-outline-info mt-2" routerLink="/addtodo">Create New Todo</button>
+  </div>
   <table class="table table-striped mt-3">
     <thead>
     <tr>
@@ -14,7 +16,7 @@
     </thead>
     <tbody>
     <tr *ngFor="let todo of todos; let i = index">
-      <th scope="row">{{ i + 1 }}</th>
+      <th  scope="row">{{ i + 1 }}</th>
       <td>{{ todo.title }}</td>
       <td>{{ todo.completed}}</td>
       <td><button class="btn btn-outline-danger" routerLink="/todo/{{ todo.id }}">Edit</button></td>
